Fix - Fix grid columns missing size and wrong padding, needed for homepage ; add class to homepage layout

--- a/web/profiles/custom/portfolio/themes/custom/portfolio_2019/components/layouts/custom-layout/_layout-12col-bootstrap.scss
+++ b/web/profiles/custom/portfolio/themes/custom/portfolio_2019/components/layouts/custom-layout/_layout-12col-bootstrap.scss
@@ -57,7 +57,9 @@
 
   // One only loop, to improve css use of media queries.
   @each $bkpt-name, $breakpoint in $grid-settings {
-    @include make-container-gutters($bkpt-name);
+    @include respond-to($bkpt-name) {
+      @include make-gutters($bkpt-name);
+    }
   }
 }
 
